notification badge contrast fixed

--- a/src/app/atoms/badge/NotificationBadge.scss
+++ b/src/app/atoms/badge/NotificationBadge.scss
@@ -7,6 +7,7 @@
   .text {
     color: var(--bg-surface-low);
     text-align: center;
+    font-weight: 700;
   }
 
   &--alert {
